# ScoreHud

./: CMakeLists.txt  README.md
docs/wiki/: Commands-and-Permissions.md  Configuration.md  Developer-Notes.md  Home.md  Installation.md  Tags.md  Troubleshooting.md  _Sidebar.md
include/: listener.h  plugin.h
include/scorehud/: score_tag.h  scoreboard_view.h  session_manager.h  settings.h  tag_resolver.h
resources/: scorehud.yml
src/: listener.cpp  plugin.cpp
src/Ifera/ScoreHud/: ScoreHud.php
src/Ifera/ScoreHud/utils/: Utils.php
src/scorehud/: score_tag.cpp  scoreboard_view.cpp  session_manager.cpp  settings.cpp  tag_resolver.cpp
